frontend/src/index.css
:root{
    --bad-job-color: red;

    /*Box colors*/
    --light-shade: #EEEEEE;
    --medium-shade: #DDDDDD;
    --dark-shade: #AAAAAA;

    /*Hover-over colors*/
    --hover-outline-color: #555555;
    --hover-shade: #FFFFFF;

    /*Pie colors*/
    --piecolor-blank: #DDDDDD;
    --piecolor-user: #637AFF;
    --piecolor-system: #17852D;
    --piecolor-wait: #BF2B1A;
    --piecolor-mem: #E5B81F;
    --piecolor-disk: #3A2CC2;
    --piecolor-gpu: #9A3FC2;

    /*Pie cycle colors*/
    --piecycle-1: #0088FE;
    --piecycle-2: #00C49F;
    --piecycle-3: #FFBB28;
    --piecycle-4: #FF8042;

    --transition-time: 0.2s;
}

body {
    margin: 0;
    padding: 0;
    font-family: 'Rubik', sans-serif;
}

#header {
    margin: auto;
    width: 90%;
    max-width: 1600px;
    display: flex;
}

#logo {
    text-align: left;
    flex: 0 0 20%;
}

#page-title {
    flex: 1;
    margin: auto;
    font-size: xx-large;
    font-weight: 300;
}

#header-right {
    flex: 0 0 20%
}

.loader {
    margin: auto;
    border: 16px solid var(--light-shade); /* Light grey */
    border-top: 16px solid var(--dark-shade); /* Blue */
    border-radius: 50%;
    width: 80px;
    height: 80px;
    animation: spin 2s linear infinite;
}

@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

#time-machine {
    transition-duration: 500ms;
    background: var(--light-shade);
    width: 90%;
    max-width: 1600px;
    margin: 10px auto;
    justify-content: space-between;
}

#time-machine-title {
    font-size: x-large;
    text-align: center;
}

#timeline {
    padding-left: 2%;
    padding-right: 2%;
}

#clock {
    font-size: x-large;
}

.bad-job {
    color: var(--bad-job-color);
}

.overview-pies{
    display: flex;
    /*flex-direction: row;*/
    flex-wrap: wrap;
    justify-content: flex-end;
    width: 100%;
    margin-bottom: 10px;
    /*border: 1px black solid;*/
}

.overview-pie {
    cursor: pointer;
    height: 64px;
    width: 64px;
    margin: 0 auto;
    /*border: 1px black solid;*/
}

.running-job-row {
    width: 100%;
    cursor: pointer;
    -o-transition:var(--transition-time);
    -ms-transition:var(--transition-time);
    -moz-transition:var(--transition-time);
    -webkit-transition:var(--transition-time);
    /* ...and now for the proper property */
    transition:var(--transition-time);
    margin-bottom: 5px;
}

.running-job-row:nth-child(odd) {
    background-color: var(--medium-shade);
}

.running-job-row:hover {
    background: var(--hover-shade);
}

.running-job-text {
    width: 100%;
}

.running-job-chart {
    width: 100%;
}

.job-names {
    text-align: left;
    width: 100%;
}

.job-block {
    width: 100%;
}

.job-names.heading {
    font-weight: 500;
    margin: 0;
}

.job-name {
    width: 100%;
    text-align: left;
}

.job-name.warn {
    color: var(--bad-job-color);
}

.cohab-job {
    cursor: pointer;
}

#node-description {
    text-align: left;
}

#main-box{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
    width: 90%;
    max-width: 1600px;
    margin: 0 auto;
    /*border: 1px black solid;*/
    align-items: top;

}

.main-item{
    height: 100%;
    padding: 2%;
    text-align: left;
    background-color: var(--light-shade);
}

.main-item.left{
    width: 26%;
    top: 0;
    position: -webkit-sticky;
    position: sticky;
}

.main-item.center{
    width: 20%;
}

.main-item.right{
    width: 41%;
    top: 0;
    position: -webkit-sticky;
    position: sticky;
    /*border: 1px black solid;*/
}

#usage-pie {
    width: 100%;
}

.user-string {
    display: flex;
    text-align: left;
    cursor: pointer;
    -o-transition:var(--transition-time);
    -ms-transition:var(--transition-time);
    -moz-transition:var(--transition-time);
    -webkit-transition:var(--transition-time);
    /* ...and now for the proper property */
    transition:var(--transition-time);
}
.user-string.hovered {
    background: var(--hover-shade);
}

.user-string.warn {
    color: var(--bad-job-color);
}

.user-string-username{
    flex: 0 0 25%;
    text-align: right;
    padding-right: 5px;
    font-weight: 500;
}

.user-string-percent{
    flex: 0 0 15%;
    padding-right: 5px;
}

.user-string-jobs{
    flex: 0 0 40%;
}

.user-strings {
    display: flex;
    flex-direction: row;
}

.user-strings-halfcol {
    flex: 1 1 50%;
}

.user-strings-col {
    flex: 1 1 100%;
}

.queue-strings {
    align: left;
    width: 100%;
}

.queue-string {
    display: flex;
    text-align: left;
}

.queue-string-username{
    flex: 0 0 15%;
    text-align: right;
    padding-right: 5px;
    font-weight: 500;
}

.queue-string-hours {
    flex: 0 0 35%;
    padding-right: 5px;
}

.queue-string-jobs{
    flex: 0 0 35%;
    text-align: left;
}

.avail-string {
    display: flex;
    text-align: center;
}

.avail-string-word{
    flex: 0 0 20%;
    text-align: left;
}

.avail-string-cores{
    flex: 0 0 10%;
    text-align: right;
    padding-right: 5px;
    font-weight: 500;
}

.avail-string-nodes{
    flex: 0 0 5%;
    text-align: right;
    padding-right: 5px;
    font-weight: 500;
}


#username-title {
    font-size: x-large;
    text-align: center;
}

#nodename-title {
    font-size: x-large;
    text-align: center;
}

.core-grid {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    background: var(--medium-shade);
    margin-bottom: 1.0em;
}

.core-pie {
    width: 5.55%;
    min-height: 40px;
}

.prop-charts {
    width: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.prop-chart-group {
    flex-grow: 0;
    flex-shrink: 0;
    flex-basis: 49%;
}

.prop-chart {
    width: 100%;
    height: 100px;
}

.prop-chart-mini {
    width: 20%;
    height: 30px;
    margin: 0 auto;
}

.mini-row {
    display: flex;
    flex-direction: row;
}

.instruction {
    font-style: italic;
}

.heading {
    margin-top: 1.0em;
    font-weight: 500;
}

#cpu-legend {
    width: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    background: var(--medium-shade);
    margin-bottom: 1.0em;

}

.cpu-legend-item {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    width: 33%;
}

.cpu-legend-label{

}

.circle {
    width: 1.0em;
    height: 1.0em;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    border-radius: 50%;
    margin-right: 0.3em;
}

.circle.user {
    background: var(--piecolor-user)
}

.circle.system {
    background: var(--piecolor-system)
}

.circle.wait {
    background: var(--piecolor-wait)
}

.circle.mem {
    background: var(--piecolor-mem)
}

.circle.gpu {
    background: var(--piecolor-gpu)
}

#ganglia-link {
    margin-top: 1.0em;
}

